added authMiddleware
