# backend/src/api/middleware/index.ts
@@ -1,2 +1,3 @@
 export * from '@root/api/middleware/apiKeyMiddleware'
 export * from '@root/api/middleware/devLoggerMiddleware'
+export * from '@root/api/middleware/authMiddleware'
